--- a/web/html_components/public/signup.html
+++ b/web/html_components/public/signup.html
@@ -1,4 +1,41 @@
-Member registration
+<div class="container">
+    <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6 col-lg-offset-3 col-lg-6">
+        <form role="form" (submit)="registerUser($event)" method="post">
+            <div class="signup-pagelet">
+                <div class="signup-block">
+                    <h1>Sign Up</h1>
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <button type="submit" class="form-control signup-facebook-button"><i class="fa fa-facebook"></i>&nbsp;&nbsp; Log in with Facebook</button> 
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <input name="firstName" [(ngModel)]="user.firstName" class="form-control input-custom-field" placeholder="First Name"/>
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <input name="lastName" [(ngModel)]="user.lastName" class="form-control input-custom-field" placeholder="Last Name"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <button type="submit" class="form-control common-custom-button">Submit</button> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+
+
+
+
+<!--Member registration
 <form role="form" (submit)="registerUser($event)" method="post">
     <div class="form-group">
         <label for="username">First name:</label>
@@ -15,4 +52,4 @@ Member registration
 <p>Hello {{user.firstName}} {{user.lastName}}</p>
 <br/>
 <br/>
-<br/>
+<br/>-->
