Search page data is added

--- a/web/html_components/public/search.html
+++ b/web/html_components/public/search.html
@@ -6,3 +6,11 @@ selected id {{id}}
 <br/>
 <br/>
 <br/>
+
+featured product list<br/>
+============================<br/>
+<ul>
+    <li *ngFor="let product of productList">
+        id: {{product.id}} , title: {{product.title}}, price : {{product.price}}, img : {{product.img}}, time : {{product.time}}
+</li>
+</ul>
