featured product list, search product update

--- a/web/html_components/public/search.html
+++ b/web/html_components/public/search.html
@@ -7,10 +7,11 @@ selected id {{id}}
 <br/>
 <br/>
 
-featured product list<br/>
+product list<br/>
 ============================<br/>
 <ul>
     <li *ngFor="let product of productList">
-        id: {{product.id}} , title: {{product.title}}, price : {{product.price}}, img : {{product.img}}, time : {{product.time}}
+        id: {{product.id}} , title: {{product.title}}, price : {{product.price}}, img : {{product.img}}, description : {{product.description}}
+        
 </li>
 </ul>
