--- a/web/html_components/public/search.html
+++ b/web/html_components/public/search.html
@@ -1,3 +1,62 @@
+<div class="container">
+    <div class="row form-group">
+        <div class="col-xs-12 col-sm-12 col-md-12">
+            <div class="panel with-nav-tabs panel-primary custom-panel">
+                <div class="panel-heading custom-panel-heading">
+                    <ul class="nav nav-tabs">
+                        <li><a href="#map" data-toggle="tab"><i class="fa fa-map-marker" aria-hidden="true"></i> Map</a></li>
+                        <li><a href="#list" data-toggle="tab"><i class="fa fa-list" aria-hidden="true"></i> List</a></li>
+                        <li class="active"><a href="#grid" data-toggle="tab"><i class="fa fa-bars" aria-hidden="true"></i> Grid</a></li>
+                        <!--                            <li class="dropdown">
+                                                        <a href="#" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                                                        <ul class="dropdown-menu" role="menu">
+                                                            <li><a href="#tab4primary" data-toggle="tab">Primary 4</a></li>
+                                                            <li><a href="#tab5primary" data-toggle="tab">Primary 5</a></li>
+                                                        </ul>
+                                                    </li>-->
+                    </ul>
+                </div>
+                <div class="panel-body custom-panel-body">
+                    <div class="tab-content">
+                        <div class="tab-pane fade" id="map">Map dispaly section</div>
+                        <div class="tab-pane fade" id="list">List Section</div>
+                        <div class="tab-pane fade in active" id="grid">
+                            <div class="row form-group">
+                                <div *ngFor="let product of productList" class="col-xs-12 col-sm-6 col-md-4 col-lg-4 form-group">
+                                    <div class="grid-property-section">
+                                        <div class="grid-property-img">
+                                            <img class="img-responsive" src="resources/images/{{product.img}}">
+                                        </div>
+                                        <div class="grid-property-price">
+                                            <h3>{{product.price}}</h3>
+                                        </div>
+                                        <div class="row">
+                                        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                                            <div class="grid-property-title">
+                                                <h4>{{product.title}}</h4>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+
+                                        </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--                        <div class="tab-pane fade" id="tab4primary">Primary 4</div>
+                                                <div class="tab-pane fade" id="tab5primary">Primary 5</div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 Search component
 <br/>
 <br/>
@@ -12,6 +71,6 @@ product list<br/>
 <ul>
     <li *ngFor="let product of productList">
         id: {{product.id}} , title: {{product.title}}, price : {{product.price}}, img : {{product.img}}, description : {{product.description}}
-        
+
 </li>
 </ul>
