--- a/web/html_components/public/search.html
+++ b/web/html_components/public/search.html
@@ -5,22 +5,87 @@
                 <div class="panel-heading custom-panel-heading">
                     <ul class="nav nav-tabs">
                         <li><a href="#map" data-toggle="tab"><i class="fa fa-map-marker" aria-hidden="true"></i> Map</a></li>
-                        <li><a href="#list" data-toggle="tab"><i class="fa fa-list" aria-hidden="true"></i> List</a></li>
-                        <li class="active"><a href="#grid" data-toggle="tab"><i class="fa fa-bars" aria-hidden="true"></i> Grid</a></li>
-                        <!--                            <li class="dropdown">
-                                                        <a href="#" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                                                        <ul class="dropdown-menu" role="menu">
-                                                            <li><a href="#tab4primary" data-toggle="tab">Primary 4</a></li>
-                                                            <li><a href="#tab5primary" data-toggle="tab">Primary 5</a></li>
-                                                        </ul>
-                                                    </li>-->
+                        <li class="active"><a href="#list" data-toggle="tab"><i class="fa fa-list" aria-hidden="true"></i> List</a></li>
+                        <li><a href="#grid" data-toggle="tab"><i class="fa fa-bars" aria-hidden="true"></i> Grid</a></li>
+                        <!--                        <li class="dropdown">
+                                                    <a href="#" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                                                    <ul class="dropdown-menu" role="menu">
+                                                        <li><a href="#tab4primary" data-toggle="tab">Primary 4</a></li>
+                                                        <li><a href="#tab5primary" data-toggle="tab">Primary 5</a></li>
+                                                    </ul>
+                                                </li>-->
                     </ul>
                 </div>
                 <div class="panel-body custom-panel-body">
                     <div class="tab-content">
                         <div class="tab-pane fade" id="map">Map dispaly section</div>
-                        <div class="tab-pane fade" id="list">List Section</div>
-                        <div class="tab-pane fade in active" id="grid">
+                        <!--List section content-->
+                        <div class="tab-pane fade in active" id="list">
+                            <div class="row form-group">
+                                <div *ngFor="let product of productList" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 form-group">
+                                    <div class="list-property-section">
+                                        <div class="row">
+                                            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+                                                <div class="row">
+                                                    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+                                                        <img class="img-responsive list-property-big-img" src="resources/images/{{product.img}}">
+                                                    </div>
+                                                    <div *ngFor="let image of product.images" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                                                        <img class="img-responsive list-property-small-img" src="resources/images/{{image.url}}">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                                                <div class="list-property-top-right-sction">
+                                                    <div class="row">
+                                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                                            <div class="list-property-title">
+                                                                <h4>{{product.title}}</h4>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                                            <div class="list-property-description">
+                                                                <h4>{{product.description}}</h4>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                                                <div class="list-property-left-bottom-section">
+                                                    <div class="list-property-price">
+                                                        <h2>{{product.price}}</h2>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                                                <div class="list-property-right-bottom-section">
+                                                    <div class="row">
+                                                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+
+                                                        </div>
+                                                        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+                                                             <a [routerLink]="['/signup']" (click)="signup($event)" class="list-property-sign-up-anchor"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                                        </div>
+                                                        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+                                                            <a href="" class="list-property-contact-anchor"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--grid section content-->
+                        <div class="tab-pane fade" id="grid">
                             <div class="row form-group">
                                 <div *ngFor="let product of productList" class="col-xs-12 col-sm-6 col-md-4 col-lg-4 form-group">
                                     <div class="grid-property-section">
@@ -30,50 +95,66 @@
                                         <div class="grid-property-price">
                                             <h3>{{product.price}}</h3>
                                         </div>
-                                        <div class="row">
-                                            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                                                <div class="grid-property-title">
-                                                    <h4>{{product.title}}</h4>
+                                        <div class="padding-5px">
+                                            <div class="row">
+                                                <div class="col-xs-12 col-sm-12 col-md-12">
+                                                    <div class="grid-property-title">
+                                                        <h4>{{product.title}}</h4>
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                                            <div class="row">
+                                                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                                                    <div class="grid-property-description">
+                                                        <h4>{{product.description}}</h4>
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                                    <a [routerLink]="['/signup']" (click)="signup($event)" class="grid-property-sign-up-anchor"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                                </div>
+                                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                                    <a href="" class="grid-property-contact-anchor"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                                                </div>
                                             </div>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <!--                        <div class="tab-pane fade" id="tab4primary">Primary 4</div>
                                                 <div class="tab-pane fade" id="tab5primary">Primary 5</div>-->
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 
 
 
-Search component
-<br/>
-<br/>
-<br/>
-selected id {{id}}
-<br/>
-<br/>
-<br/>
+    Search component
+    <br/>
+    <br/>
+    <br/>
+    selected id {{id}}
+    <br/>
+    <br/>
+    <br/>
 
-product list<br/>
-============================<br/>
-<ul>
-    <li *ngFor="let product of productList">
-        id: {{product.id}} , title: {{product.title}}, price : {{product.price}}, img : {{product.img}}, description : {{product.description}}
-        Images :
-        <div *ngFor="let image of product.images">
-            Image Id:{{image.id}} , Image url: {{image.url}}
+    product list<br/>
+    ============================<br/>
+    <ul>
+        <li *ngFor="let product of productList">
+            id: {{product.id}} , title: {{product.title}}, price : {{product.price}}, img : {{product.img}}, description : {{product.description}}
+            Images :
+            <div *ngFor="let image of product.images">
+                Image Id:{{image.id}} , Image url: {{image.url}}
         </div>
-</li>
+    </li>
 </ul>
