--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -109,7 +109,7 @@
                     </div>                          
                 </div>
             </div>
-            <div class="row form-group">
+            <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h2 class="product-info-details-right-panel-product-description-header">Product Description</h2>
                 </div>
