non memebr, member & admin panel updated

--- a/web/html_components/public/landing.html
+++ b/web/html_components/public/landing.html
@@ -1,4 +1,22 @@
 <div class="container">
+    <div class="row form-group steps">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
+            <img src="resources/images/steps1.png">
+            <span class="hd-content">Create a <a [routerLink]="['/signup']" (click)="signup($event)">free account</a> and <a href="">log in</a>!</span>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
+            <img src="resources/images/steps2.png">
+            <span class="hd-content">Bid and Win</span>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
+            <img src="resources/images/steps3.png">
+            <span class="hd-content">Pay the seller</span>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 form-group">
+            <img src="resources/images/steps4.png">
+            <span class="hd-content">Enjoy your purchase</span>
+        </div>
+    </div>
     <div class="row form-group">
         <div class="col-xs-12 col-sm-7 col-md-8 col-lg-8 form-group">
             <div class="search-box-pagelet form-group">
