--- a/web/html_components/public/search.html
+++ b/web/html_components/public/search.html
@@ -116,7 +116,7 @@
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                                             <div class="list-property-title">
-                                                                <h4>{{product.title}}</h4>
+                                                                <h4><a [routerLink]="['/productInfo']" (click)="selectProduct($event, 1)">{{product.title}}</a></h4>
                                                             </div>
                                                         </div>
                                                     </div>
